:recycle: Add business logic to another file